exports[`actions > site create site should work 1`] = `
Object {
  "payload": Object {
    "organizationId": "organization-id",
    "site": Object {
      "name": "mockSite",
    },
  },
  "type": "add site",
}
`;

exports[`actions > site create site should work 2`] = `
Object {
  "payload": Object {
    "args": Array [
      "/organizations/organization-id",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > site delete site should work 1`] = `
Array [
  Object {
    "payload": "site-id",
    "type": "delete site",
  },
  Object {
    "payload": Object {
      "args": Array [
        "/organizations/organization-id",
      ],
      "method": "push",
    },
    "type": "@@router/CALL_HISTORY_METHOD",
  },
]
`;

exports[`actions > site update site should work 1`] = `
Object {
  "payload": Object {
    "id": "site-id",
    "name": "New Name",
  },
  "type": "update site",
}
`;

exports[`actions > site update site should work 2`] = `
Object {
  "payload": Object {
    "args": Array [
      "/organizations/organization-id",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
